# pf_esolmet

./: main.py  pyproject.toml
data/001_raw/20230123/: analisi_I_UV.xlsx
data/001_raw/20230124/: CR1000-ESOLMET_LOC_DataTableInfo.dat.backup
data/001_raw/20230301/: 24ENE-01MAZO-23-C-IUV.xlsx
data/001_raw/20230531/: Esolmet_CR6_IP_Public.dat.2.backup  Esolmet_CR6_IP_Table1_60min.dat.2.backup  Esolmet_CR6_IP_Table2_10min.dat.2.backup  Esolmet_Reportes_10min.csv
data/001_raw/20230601/: Esolmet_Reportes_10min.csv
data/001_raw/20230616/: Para_año_reportes.csv
data/002_processed/: esolmet_2022_2023.parquet
notebook/: 001_ETL.ipynb  002_analisis_esolmet.ipynb
notebook/.ipynb_checkpoints/: 001_ETL-checkpoint.ipynb
tools/.ipynb_checkpoints/: importaciones-checkpoint.py
