[project]
name = "pf-esolmet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet>=5.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "missingno>=0.5.2",
    "notebook>=7.5.0",
    "numpy>=2.3.5",
    "panadas>=0.2",
    "pyarrow>=22.0.0",
]
